Start of bomber-cli